# langgraph-multiagent_data-copilot

./: .env.example  .gitignore  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.streamlit  ENHANCED_FEATURES.md  README.md  SAMPLE_QUERIES.md  docker-compose.yml  main.py  pyproject.toml  start_services.py  test_comprehensive.py  test_full_system.py  test_new_schema.py
app/: __init__.py
app/agents/: __init__.py  chart.py  config.py  explainer.py  graph.py  planner.py  prompts.py  sql.py
app/api/: __init__.py  app.py  endpoints.py
app/db/: __init__.py  database.py  seed.sql
app/models/: __init__.py  state.py
app/utils/: __init__.py  chart.py
charts/: .gitkeep
scripts/: init_db.py  test_api.py  test_query.py
tests/: __init__.py  test_chart.py  test_graph.py  test_sql_agent.py
ui/: streamlit_app.py
